[gd_scene load_steps=12 format=3 uid="uid://h4l4nxnxn4v1"]

[ext_resource type="Script" path="res://Levels/VoidLevel.gd" id="1_2r7l4"]
[ext_resource type="PackedScene" uid="uid://dvwx4paulp02r" path="res://Entities/Player.tscn" id="1_jpimm"]
[ext_resource type="Shader" path="res://Entities/Player.gdshader" id="2_j2tx5"]
[ext_resource type="PackedScene" uid="uid://dww2yxhntmfy6" path="res://Objects/void.tscn" id="4_t58pd"]

[sub_resource type="PlaneMesh" id="PlaneMesh_pj4en"]
size = Vector2(500, 500)

[sub_resource type="ShaderMaterial" id="ShaderMaterial_mb6b7"]
render_priority = 0
shader = ExtResource("2_j2tx5")
shader_parameter/depth_range = 100.0

[sub_resource type="QuadMesh" id="QuadMesh_6dn75"]
material = SubResource("ShaderMaterial_mb6b7")
flip_faces = true
size = Vector2(2, 2)

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_asxjo"]
shading_mode = 0

[sub_resource type="SphereMesh" id="SphereMesh_8sroe"]
material = SubResource("StandardMaterial3D_asxjo")
radius = 0.25
height = 0.5

[sub_resource type="Curve" id="Curve_q3s73"]
max_value = 2.0
_data = [Vector2(0.706977, 1.0989), 0.0, 0.0, 0, 0, Vector2(1, 1.97802), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="SphereMesh" id="SphereMesh_wrxtl"]
material = SubResource("StandardMaterial3D_asxjo")

[node name="VoidLevel" type="Node3D"]
script = ExtResource("1_2r7l4")

[node name="Collidable" type="Node3D" parent="."]

[node name="MeshInstance3D" type="MeshInstance3D" parent="Collidable"]
layers = 0
mesh = SubResource("PlaneMesh_pj4en")

[node name="Player" parent="." instance=ExtResource("1_jpimm")]

[node name="FogShader" parent="Player/Neck" index="0"]
mesh = SubResource("QuadMesh_6dn75")

[node name="Skeleton3D" parent="Player/Armature" index="0"]
bones/0/rotation = Quaternion(-0.707107, 0, 0, 0.707107)
bones/1/rotation = Quaternion(-0.0581642, 0, 0, 0.998307)
bones/4/rotation = Quaternion(0.0581643, -2.86629e-18, -2.74077e-10, 0.998307)
bones/7/rotation = Quaternion(-0.557435, -0.429707, 0.575841, -0.415962)
bones/8/rotation = Quaternion(0.49563, -0.000101481, -0.0639843, 0.866174)
bones/9/rotation = Quaternion(-0.0299411, 0.000232075, -0.00775205, 0.999522)
bones/11/rotation = Quaternion(0.556062, -0.430772, 0.576953, 0.415157)
bones/12/rotation = Quaternion(0.507318, 0.00026988, 0.0628721, 0.859462)
bones/13/rotation = Quaternion(-0.0300614, -0.000255725, 0.00850436, 0.999512)
bones/15/rotation = Quaternion(-0.00054274, -0.0106839, 0.998636, -0.0511009)
bones/16/rotation = Quaternion(-0.032193, 0.00077779, -0.0240972, 0.999191)
bones/17/rotation = Quaternion(0.509941, 0.0140525, -0.00833148, 0.860054)
bones/18/rotation = Quaternion(0.266752, -0.0254851, 0.00705608, 0.963402)
bones/20/rotation = Quaternion(0.00047685, -0.00939234, 0.998649, 0.0511043)
bones/21/rotation = Quaternion(-0.0396459, -0.000961772, 0.0240952, 0.998923)
bones/22/rotation = Quaternion(0.518862, -0.0136761, 0.00830169, 0.854708)
bones/23/rotation = Quaternion(0.262864, 0.0251447, -0.0068527, 0.964481)

[node name="CPUParticles3D" type="CPUParticles3D" parent="."]
amount = 216
lifetime = 120.0
preprocess = 60.0
speed_scale = 12.49
mesh = SubResource("SphereMesh_8sroe")
emission_shape = 2
emission_sphere_radius = 128.0
direction = Vector3(5, 0, 0)
spread = 180.0
flatness = 1.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.1
initial_velocity_max = 0.1
scale_amount_min = 0.5
scale_amount_max = 1.2
scale_amount_curve = SubResource("Curve_q3s73")

[node name="CPUParticles3D2" type="CPUParticles3D" parent="."]
amount = 216
lifetime = 360.0
preprocess = 5.0
explosiveness = 0.99
mesh = SubResource("SphereMesh_wrxtl")
emission_shape = 2
emission_sphere_radius = 128.0
direction = Vector3(5, 0, 0)
spread = 180.0
flatness = 1.0
gravity = Vector3(0, 0, 0)
initial_velocity_min = 0.1
initial_velocity_max = 0.1
scale_amount_min = 0.2
scale_amount_max = 0.2

[node name="MeshInstance3D2" parent="." instance=ExtResource("4_t58pd")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1000, -1000)
skeleton = NodePath("")

[node name="Timer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true
autostart = true

[node name="Timer2" type="Timer" parent="."]
wait_time = 15.0
one_shot = true
autostart = true

[node name="Timer3" type="Timer" parent="."]
wait_time = 30.0
one_shot = true
autostart = true

[node name="Timer4" type="Timer" parent="."]
wait_time = 38.0
one_shot = true
autostart = true

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="Timer2" to="." method="_on_timer_2_timeout"]
[connection signal="timeout" from="Timer3" to="." method="_on_timer_3_timeout"]
[connection signal="timeout" from="Timer4" to="." method="_on_timer_4_timeout"]

[editable path="Player"]
[editable path="Player/QuitWindow"]
